# little_pig_navigation

./: CMakeLists.txt  README.md  package.xml
launch/: ekf_1.launch  ekf_1_sim.launch  ekf_2.launch  ekf_2_sim.launch  ekf_template.launch  gmapping (copy).launch  gmapping.launch  gmapping_sim.launch  lidar.launch  mavros.launch  move_base_nav.launch  navigation.launch  navsat.launch  navsat_sim.launch  view_lidar.launch
launch/include/: collect_goals_sim.launch  heading_calibration_sim.launch  safety_node.launch  send_goals_sim.launch
params/: LiDAR.yaml  RS_base_local_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  ekf.yaml  ekf_1.yaml  ekf_1_sim.yaml  ekf_2.yaml  ekf_2_sim.yaml  global_costmap_params.yaml  gmapping.yaml  local_costmap_params.yaml  mavros_config.yaml  move_base_params.yaml  navsat.yaml
scripts/: joy_launch_control.py  joy_launch_control_mapping.py
simulation/: waypoint_navigation_sim.launch
simulation_control/: joy_launch_control.launch  joy_launch_control_sim.launch
src/: calibrate_heading.cpp  collect_gps_waypoints.cpp  gps_waypoint.cpp  gps_waypoint_continuous2.cpp  gps_waypoint_mapping.cpp  little_pig_back_laser_tf_br.cpp  little_pig_back_laser_tf_ls.cpp  little_pig_base_link_tf_br.cpp  little_pig_base_link_tf_ls.cpp  little_pig_camera_link_tf_br.cpp  little_pig_camera_link_tf_ls.cpp  little_pig_chassis_tf_br.cpp  little_pig_chassis_tf_ls.cpp  little_pig_front_laser_tf_br.cpp  little_pig_front_laser_tf_ls.cpp  little_pig_imu_link_tf_br.cpp  little_pig_imu_link_tf_ls.cpp  little_pig_laser_link_back_tf_br.cpp  little_pig_laser_link_back_tf_ls.cpp  little_pig_laser_link_tf_br.cpp  little_pig_laser_link_tf_ls.cpp  map_transformer.cpp  plot_gps_waypoints.cpp  safety_node.cpp  tf_broadcaster.cpp  tf_listener.cpp
waypoint_files/: gas_station_backup.txt  points_sim.txt
