<?xml version="1.0"?>
<package format="2">
  <name>little_pig_navigation</name>
  <version>0.0.0</version>
  <description>The little_pig_navigation package</description>

  <maintainer email="coach@todo.todo">coach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>



  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
